--- a/app/views/envoices/index.html.erb
+++ b/app/views/envoices/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Customer</th>
+      <th>Valor</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +14,8 @@
   <tbody>
     <% @envoices.each do |envoice| %>
       <tr>
-        <td><%= envoice.customer %></td>
+        <td><%= envoice.customer.name %></td>
+        <td><%= envoice.total %> </td>
         <td><%= link_to 'Show', envoice %></td>
         <td><%= link_to 'Edit', edit_envoice_path(envoice) %></td>
         <td><%= link_to 'Destroy', envoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
